--- a/main.css
+++ b/main.css
@@ -189,8 +189,13 @@ header{
         margin-right: 5px;
         
     }
+}
+@media(max-width:720px){
+    .logo img:first-child{
+        display: none;
+    }
     .logo img:last-child{
-        width: 200px;
+        width: 160px;
     }
 }
 /* -------------------main------------------ */
@@ -471,4 +476,5 @@ header{
         width: 100%;
         margin: 0;
     }
+   
 }
