--- a/main.css
+++ b/main.css
@@ -197,6 +197,15 @@ header{
     .logo img:last-child{
         width: 160px;
     }
+    .icon{
+        display: flex;
+        justify-content: center;
+    }
+    .icon button{
+        margin: 0 3px;
+        font-size: 15px;
+        color: #000;
+    }
 }
 /* -------------------main------------------ */
 /* 슬라이드1 */
